# LLMUtilities

./: .gitignore  DESIGN-1.0.md  DESIGN-2.0.md  IMPLEMENTATION.md  README.md  TODO.md  pyproject.toml  requirements.txt
src/LLMUtilities/: IMAGE_PRICING.json  PRICING.json  __init__.py  chat.py  compare.py  config.py  costs.py  embeddings.py  exceptions.py  image.py  tokens.py  types.py  utils.py
src/LLMUtilities/capabilities/: __init__.py  chat.py  embedding.py  image_generation.py  token_counting.py
src/LLMUtilities/parsing/: __init__.py  json_parsing.py  structured_output.py
src/LLMUtilities/providers/: __init__.py  anthropic.py  base.py  base_image.py  chat_cost_calculation.py  deepseek.py  google.py  moonshot.py  openai.py  openai_chat_completions.py  openai_compatible_chat.py  openai_image.py  pricing_loading.py  registry.py
src/LLMUtilities/providers/anthropic/: __init__.py  chat.py  pricing.json  pricing.py  tokens.py
src/LLMUtilities/providers/deepseek/: __init__.py  pricing.json  pricing.py
src/LLMUtilities/providers/google/: __init__.py  chat.py  embedding.py  pricing.json  pricing.py  tokens.py
src/LLMUtilities/providers/moonshot/: __init__.py  pricing.json  pricing.py
src/LLMUtilities/providers/openai/: __init__.py  chat.py  embedding.py  image.py  image_pricing.json  pricing.json  pricing.py  tokens.py
src/LLMUtilities/tracing/: __init__.py  tracing.py
src/LLMUtilities/transports/: anthropic_messages.py  google_generate_content.py  openai_chat_completions.py  openai_responses.py
src/LLMUtilities/types/: __init__.py  cost_summary.py  requests.py  responses.py
tests/: conftest.py  fakes.py  openai_sdk_fakes.py  test_capabilities.py  test_chat_facade.py  test_compare.py  test_costs.py  test_embeddings.py  test_image_costs.py  test_image_facade.py  test_live.py  test_package.py  test_parsing.py  test_pricing_and_costs.py  test_provider_anthropic.py  test_provider_google.py  test_provider_openai.py  test_provider_openai_compatible.py  test_registry.py  test_tokens.py  test_tracing.py
tests/providers/: test_anthropic_chat.py  test_google_chat.py  test_openai_chat.py  test_openai_compatible_chat.py  test_openai_image.py
